--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "workbench.colorTheme": "Learn with Sumit - Professional"
+  "workbench.colorTheme": "Learn with Sumit - Peace of the eye - Dracula version"
 }
